# _vst_fx_vscode

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLION_BUILD_INSTRUCTIONS.md  CLION_QUICK_START.md  CMakeLists.txt  CONTRIBUTING.md  MULTI_FX_USAGE.md  PARAMS.md  PROGRESS_REPORT.md  PROJECT_SUMMARY.md  README.md  TESTING.md  TODO.md  UI_METERING.md  VST3 audio effect processor prompt1.md  VST3 audio effect processor prompt2.md  VST3 audio effect processor prompt3.md  WHAT_S_DONE.md  _vst_comp_prompt.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: CompressorMath.h  CompressorModule.cpp  CompressorModule.h  DelayModule.cpp  DelayModule.h  EffectChain.cpp  EffectChain.h  EffectModule.cpp  EffectModule.h  SaturationModule.cpp  SaturationModule.h
Tests/: CMakeLists.txt  compressor_math_test.cpp  compressor_module_test.cpp  dsp_helpers.cpp  dsp_helpers.h  dsp_test.cpp  test_example.cpp
cleanup/JUCE-master-build-artifact/: Makefile  cmake_install.cmake
cleanup/JUCE-master-build-artifact/modules/: Makefile
cleanup/JUCE-master-build-artifact/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
cleanup/JUCE-master-build-artifact/tools/modules/: Makefile  cmake_install.cmake
fx modules/_beatbox/: CHANGELOG.md  CMakeLists.txt  README.md  SUMMARY.md  TODO.md  TROUBLESHOOTING_ABLETON.md
fx modules/_beatbox/docs/: API.md  ARCHITECTURE.md  CHAT_TRANSCRIPT.md  CODE_SNIPPETS.md  GETTING_STARTED.md  build error
fx modules/_delay/: README.md
fx modules/_delay/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
